FE_221018_login: form 수정 진행중
Former-commit-id: c37e40f5ffdc0aac0bb06f4a99be2bb134865362

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
             app:popUpTo="@id/testFragment"
             android:id="@+id/action_testFragment2_to_testFragment3"
             app:destination="@id/testFragment3" />
+        <argument
+            android:name="seValue"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/testFragment3"
