--- a/android/app/src/main/res/layout/fragment_record.xml
+++ b/android/app/src/main/res/layout/fragment_record.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RecordFragment">
-    <TextView
+<!--        <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/record_tablayout"-->
+<!--            style="@style/Widget.MaterialComponents.TabLayout.Colored"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/record_tablayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="record" />
+        android:layout_height="wrap_content">
+    </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/record_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/record_tablayout"
+        />
 </FrameLayout>
