--- a/android/app/src/main/res/layout/fragment_record.xml
+++ b/android/app/src/main/res/layout/fragment_record.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".RecordFragment">
-<!--        <com.google.android.material.tabs.TabLayout-->
-<!--            android:id="@+id/record_tablayout"-->
-<!--            style="@style/Widget.MaterialComponents.TabLayout.Colored"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/record_tablayout"
         android:layout_width="match_parent"
@@ -18,7 +15,10 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/record_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/record_tablayout"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-</FrameLayout>
+</LinearLayout>
