FE_221020_notification: 알림 리스트 구현 완료
Former-commit-id: 6655352f15a07334f455e9ca83bb7c0f6b26b8df

--- a/android/app/src/main/res/layout/fragment_notification.xml
+++ b/android/app/src/main/res/layout/fragment_notification.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="3px"
+    android:layout_margin="3dp"
     tools:context=".NotificationFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        app:layoutManager="GridLayoutManager"
-        tools:listitem="@layout/notification_item" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="628dp"
+            android:layout_margin="10dp"
+            app:layoutManager="GridLayoutManager"
+            tools:listitem="@layout/notification_item" />
+
+
+
 </FrameLayout>
