--- a/android/app/src/main/res/layout/board_item.xml
+++ b/android/app/src/main/res/layout/board_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/board_layout"
     android:layout_width="match_parent"
-    android:layout_height="440dp"
+    android:layout_height="430dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="8dp"
-    android:layout_marginHorizontal="8dp"
     android:background="@color/white"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="@id/profileContanier" />
 
         <TextView
-            android:id="@+id/userId"
+            android:id="@+id/userNickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/usernickname1"
@@ -54,7 +54,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/profileImage"
-            app:layout_constraintTop_toBottomOf="@+id/userId"
+            app:layout_constraintTop_toBottomOf="@+id/userNickname"
 
             app:layout_constraintVertical_bias="0.5" />
 
@@ -67,7 +67,8 @@
         app:layout_constraintTop_toBottomOf="@id/profileContanier"
         app:layout_constraintStart_toStartOf="parent"
         >
-        <androidx.constraintlayout.utils.widget.ImageFilterView
+        <ImageView
+            android:id="@+id/boardImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/boardimage1"
@@ -78,12 +79,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/commentContainer"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageContainer">
         <TextView
+            android:id="@+id/boardContent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:text="@string/boardcontent1"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/commentContainer"
@@ -92,17 +94,42 @@
 
         </TextView>
         <androidx.constraintlayout.utils.widget.ImageFilterButton
+            android:id="@+id/commentButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/commentContainer"
-            app:layout_constraintEnd_toEndOf="@id/commentContainer"
+            app:layout_constraintEnd_toStartOf="@id/commentCount"
             android:src="@drawable/ic_comment_show"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_marginEnd="4dp">
 
         </androidx.constraintlayout.utils.widget.ImageFilterButton>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/commentCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="233"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@id/commentContainer"
+            app:layout_constraintEnd_toEndOf="@id/commentContainer"
+            app:layout_constraintTop_toTopOf="@id/commentButton">>
 
+        </TextView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/boardDivider"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/board_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/grey"
+        android:orientation="horizontal">
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
