--- a/android/app/src/main/res/layout/fragment_record_board.xml
+++ b/android/app/src/main/res/layout/fragment_record_board.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/board_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RecordBoardFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/board_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="board" />
+        tools:listitem="@layout/board_item" />
 
-</FrameLayout>
+</LinearLayout>
