--- a/android/app/src/main/res/layout/album_item.xml
+++ b/android/app/src/main/res/layout/album_item.xml
@@ -11,7 +11,7 @@
     app:strokeWidth="1dp"
     app:strokeColor="@color/lightgray"
     >
-    <ImageButton
+    <ImageView
         android:id="@+id/album_image"
         android:layout_width="match_parent"
         android:layout_height="180dp"
