--- a/android/app/src/main/res/layout/fragment_record_album.xml
+++ b/android/app/src/main/res/layout/fragment_record_album.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="55dp"
     tools:context=".RecordAlbumFragment">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/album_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="GridLayoutManager"
@@ -21,17 +21,4 @@
             android:layout_marginBottom="15dp"
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white"/>
-<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--            android:id="@+id/add_album_fab"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginRight="16dp"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:layout_gravity="bottom|right"-->
-<!--            android:text="앨범"-->
-<!--            android:textSize="18dp"-->
-<!--            android:textColor="@android:color/white"-->
-<!--            app:icon="@drawable/ic_baseline_add_24"-->
-<!--            app:iconTint="@color/white" />-->
-
 </FrameLayout>
