FE_221021_board : 백문백답 완료
Former-commit-id: 1d439fb28751063b8b46c7a37e084a806a6ec968

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -13,7 +13,11 @@
         android:id="@+id/recordFragment"
         android:name="com.ssafy.zip.android.RecordFragment"
         android:label="fragment_record"
-        tools:layout="@layout/fragment_record" />
+        tools:layout="@layout/fragment_record" >
+        <action
+            android:id="@+id/action_recordFragment_to_recordQuizFragment"
+            app:destination="@id/recordQuizFragment" />
+    </fragment>
     <fragment
         android:id="@+id/calendarFragment"
         android:name="com.ssafy.zip.android.CalendarFragment"
@@ -24,4 +28,8 @@
         android:name="com.ssafy.zip.android.NotificationFragment"
         android:label="fragment_notification"
         tools:layout="@layout/fragment_notification" />
+    <fragment
+        android:id="@+id/recordQuizFragment"
+        android:name="com.ssafy.zip.android.RecordQuizFragment"
+        android:label="RecordQuizFragment" />
 </navigation>
