--- a/android/app/src/main/res/layout/fragment_record_quiz.xml
+++ b/android/app/src/main/res/layout/fragment_record_quiz.xml
@@ -33,6 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="게시판"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/quizButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -44,16 +46,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="백문백답"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/letterBbutton"
+            app:layout_constraintEnd_toStartOf="@+id/letterButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/boardButton"
             app:layout_constraintTop_toTopOf="parent"></Button>
 
         <Button
-            android:id="@+id/letterBbutton"
+            android:id="@+id/letterButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="오늘의편지"
@@ -68,9 +68,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/board_recyclerview"
+        android:id="@+id/quiz_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/board_item" />
+        tools:listitem="@layout/quiz_item" />
 
 </LinearLayout>
