--- a/android/app/src/main/res/layout/photo_item.xml
+++ b/android/app/src/main/res/layout/photo_item.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ssafy.zip.android.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     >
-    <ImageButton
-        android:id="@+id/photo_image"
+    <com.google.android.material.card.MaterialCardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:background="@android:color/transparent"/>
-</com.google.android.material.card.MaterialCardView>
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/lightgray"
+        >
+        <ImageButton
+            android:id="@+id/photo_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:background="@android:color/transparent"/>
+    </com.google.android.material.card.MaterialCardView>
+</com.ssafy.zip.android.SquareFrameLayout>
