FE_221022_home: 구성원 recylerview 구현 완료, 전체 u i 변경중
Former-commit-id: ba726c477e70573ae107b46bffa6593967f58a57

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,9 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_baseline_door_sliding_24"
-        app:layout_anchor="@id/bottomAppBar"
+        app:layout_anchor="@+id/bottomAppBar"
+        app:layout_anchorGravity="center"
         app:maxImageSize="32dp"
-        app:tint="#ffffff"/>
+        app:tint="#ffffff" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
