FE_221023_board : 게시판 프래그먼트들 생성 완료
Former-commit-id: ea40b461664aed52b589fc711b42028cc8f3fb3e

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_recordFragment_to_recordQuizFragment"
             app:destination="@id/recordQuizFragment" />
+        <action
+            android:id="@+id/action_recordFragment_to_recordLetterFragment"
+            app:destination="@id/recordLetterFragment" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
@@ -32,4 +35,8 @@
         android:id="@+id/recordQuizFragment"
         android:name="com.ssafy.zip.android.RecordQuizFragment"
         android:label="RecordQuizFragment" />
+    <fragment
+        android:id="@+id/recordLetterFragment"
+        android:name="com.ssafy.zip.android.RecordLetterFragment"
+        android:label="RecordLetterFragment" />
 </navigation>
