--- a/android/app/src/main/res/layout/fragment_record_letter.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/board_recycler_view"
+    android:id="@+id/letter_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RecordBoardFragment"
@@ -33,6 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="게시판"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/quizButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -57,8 +59,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="오늘의편지"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -67,11 +67,11 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    조건을 넣어서 , 어떤걸 보여줄지 정하는 느낌?-->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/board_recyclerview"
+        android:id="@+id/letter_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/board_item" />
+        tools:listitem="@layout/letter_item" />
+
 
 </LinearLayout>
