--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,9 @@
             android:id="@+id/topText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="30dp"
+            android:layout_marginTop="8dp"
             android:text="ZIP"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,12 +28,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             android:text="행복한 우리 가조쿠"
             app:layout_constraintTop_toBottomOf="@+id/topText" />
 
         <FrameLayout
             android:id="@+id/home_house"
             android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
             android:layout_height="300dp"
             android:background="@drawable/house"
             app:layout_constraintTop_toBottomOf="@+id/familyName" />
@@ -48,9 +53,9 @@
             android:id="@+id/home_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:nestedScrollingEnabled="false"
             android:overScrollMode="never"
-            android:layout_marginTop="8dp"
             app:layoutManager="GridLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/familyMember"
             tools:listitem="@layout/home_item" />
@@ -58,10 +63,15 @@
         <FrameLayout
             android:id="@+id/home_mission"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/white"
+            android:layout_height="220dp"
+            android:layout_marginHorizontal="4dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/home_recycler_view"></FrameLayout>
+            android:background="@color/white"
+            android:elevation="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_recycler_view"
+            app:layout_constraintBottom_toBottomOf="parent"></FrameLayout>
 
         <TextView
             android:id="@+id/mission_top"
@@ -69,6 +79,8 @@
             android:layout_height="wrap_content"
             android:text="@string/mission_top"
             android:textSize="20dp"
+            android:elevation="10dp"
+            android:outlineProvider="none"
             app:layout_constraintBottom_toTopOf="@id/mission1"
             app:layout_constraintTop_toTopOf="@+id/home_mission"></TextView>
 
@@ -77,7 +89,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="8dp"
+            app:layout_constraintCircleRadius="10dp"
             android:background="@color/white"
+            android:elevation="10dp"
             app:layout_constraintBottom_toTopOf="@id/mission2"
             app:layout_constraintEnd_toEndOf="@id/home_mission"
             app:layout_constraintStart_toStartOf="@id/home_mission"
@@ -88,8 +103,12 @@
             android:id="@+id/mission1_point"
             android:layout_width="50dp"
             android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:src="@drawable/point"
             app:layout_constraintBottom_toBottomOf="@id/mission1"
+            app:layout_constraintEnd_toStartOf="@id/mission1_content"
             app:layout_constraintStart_toStartOf="@id/mission1"
             app:layout_constraintTop_toTopOf="@id/mission1"></ImageView>
 
@@ -97,16 +116,27 @@
             android:id="@+id/mission1_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:text="@string/mission1_title"
             app:layout_constraintEnd_toEndOf="@id/mission1"
             app:layout_constraintStart_toEndOf="@id/mission1_point"
-            app:layout_constraintTop_toTopOf="@id/mission1"></TextView>
+            app:layout_constraintTop_toTopOf="@id/mission1"
+            app:layout_constraintVertical_chainStyle="packed"></TextView>
 
         <TextView
             android:id="@+id/mission1_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:text="@string/mission1_content"
+            app:layout_constraintBottom_toTopOf="@+id/mission1_progress"
             app:layout_constraintEnd_toEndOf="@id/mission1"
             app:layout_constraintStart_toEndOf="@id/mission1_point"
             app:layout_constraintTop_toBottomOf="@id/mission1_title"></TextView>
@@ -116,8 +146,14 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="20dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:progress="25"
             android:scaleY="3"
+            app:layout_constraintBottom_toBottomOf="@id/mission1"
             app:layout_constraintEnd_toEndOf="@id/mission1"
             app:layout_constraintStart_toEndOf="@id/mission1_point"
             app:layout_constraintTop_toBottomOf="@id/mission1_content"></ProgressBar>
@@ -138,6 +174,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="20dp"
             android:background="@color/white"
+            android:elevation="10dp"
             app:layout_constraintBottom_toBottomOf="@id/home_mission"
             app:layout_constraintTop_toBottomOf="@id/mission1"
             app:layout_constraintVertical_weight="1"></FrameLayout>
@@ -156,15 +193,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/mission2_title"
+            app:layout_constraintBottom_toTopOf="@id/mission2_content"
             app:layout_constraintEnd_toEndOf="@id/mission2"
             app:layout_constraintStart_toEndOf="@id/mission2_point"
-            app:layout_constraintTop_toTopOf="@id/mission2"></TextView>
+            app:layout_constraintTop_toTopOf="@id/mission2"
+            app:layout_constraintVertical_chainStyle="packed"></TextView>
 
         <TextView
             android:id="@+id/mission2_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/mission2_content"
+            app:layout_constraintBottom_toTopOf="@id/mission2_progress"
             app:layout_constraintEnd_toEndOf="@id/mission2"
             app:layout_constraintStart_toEndOf="@id/mission2_point"
             app:layout_constraintTop_toBottomOf="@id/mission2_title"></TextView>
@@ -177,6 +217,7 @@
             android:layout_marginEnd="8dp"
             android:progress="25"
             android:scaleY="3"
+            app:layout_constraintBottom_toBottomOf="@id/mission2"
             app:layout_constraintEnd_toEndOf="@id/mission2"
             app:layout_constraintStart_toEndOf="@id/mission2_point"
             app:layout_constraintTop_toBottomOf="@id/mission2_content"></ProgressBar>
