FE_221024_calendar: 진행중
Former-commit-id: 0803ddda645017842e0b71953ff54281feae8d60

--- a/android/app/src/main/res/layout/calendar_item.xml
+++ b/android/app/src/main/res/layout/calendar_item.xml
@@ -22,23 +22,24 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/calendar_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 android:layout_weight="2"
                 android:gravity="center_vertical"
                 android:text="일정 시간"
                 android:textColor="#000000"
-                android:textSize="13sp"
-                android:layout_marginStart="15dp"/>
+                android:textSize="13sp" />
             <TextView
                 android:id="@+id/calendar_num"
-                android:layout_width="320dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="일정 내용"
