--- a/android/app/src/main/res/layout/calendar.xml
+++ b/android/app/src/main/res/layout/calendar.xml
@@ -20,12 +20,13 @@
         android:id="@+id/diaryTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity= "center"
+        android:gravity= "start"
         android:layout_marginTop="16dp"
+        android:text="10월 24일"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
         app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:layout_marginStart="15dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
 
 
