FE_221024_albumPhotoDetail: 사진 상세 페이지에 앨범 사진 리스트 가져오기까지 구현 완료
Former-commit-id: 929569ea65c9d48ab82b334ec5436322df1367bf

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -32,5 +32,14 @@
         android:id="@+id/recordAlbumPicturesFragment2"
         android:name="com.ssafy.zip.android.RecordAlbumPicturesFragment"
         android:label="fragment_record_album_photo"
-        tools:layout="@layout/fragment_record_album_photo" />
+        tools:layout="@layout/fragment_record_album_photo" >
+        <action
+            android:id="@+id/action_recordAlbumPicturesFragment2_to_recordAlbumPhotoDetailFragment2"
+            app:destination="@id/recordAlbumPhotoDetailFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/recordAlbumPhotoDetailFragment2"
+        android:name="com.ssafy.zip.android.RecordAlbumPhotoDetailFragment"
+        android:label="fragment_record_album_photo_detail"
+        tools:layout="@layout/fragment_record_album_photo_detail" />
 </navigation>
