--- a/android/app/src/main/res/layout/photo_item.xml
+++ b/android/app/src/main/res/layout/photo_item.xml
@@ -15,7 +15,7 @@
         app:strokeWidth="1dp"
         app:strokeColor="@color/lightgray"
         >
-        <ImageButton
+        <ImageView
             android:id="@+id/photo_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
